--- a/project-wt/jobfind/src/app/content/content.component.css
+++ b/project-wt/jobfind/src/app/content/content.component.css
@@ -1,10 +1,25 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
+*{
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
+}
+section{
+    font-family: 'Poppins', sans-serif;
+}
 .con{
+    font-family: 'Poppins', sans-serif;
     display: flex;
     flex-flow: column wrap;
     justify-content: space-between;
     align-content: center;
     gap:4rem;
     /* overflow-x: hidden; */
+}
+.con .cs #con,
+.con .cs #vss{
+    font-family: 'Poppins', sans-serif;
+    position: relative;
+    left:-3em;
 }
 .cs{
     position: relative;
@@ -51,8 +66,8 @@ section img{
       top:4rem;
       margin-left: 5rem;
       padding: 20px 10px;
-      font-weight: 600;
-      font-size: 3.5rem;
+      font-weight: 700;
+      font-size: 3.2rem;
   }
   .cs h1{
       display: flex;
@@ -103,6 +118,7 @@ section img{
     bottom: 28rem;
  }
  .cs2 h1{
+    font-family: 'Poppins', sans-serif;
     position: relative;
     left:10rem;
      font-size: 3rem;
@@ -119,17 +135,9 @@ section img{
     font-size: 3.5rem;
     font-weight: 700;
     top:5rem;
-    right:9.5rem;
+    right:9rem;
 }
-  @media only screen and (max-width:760px){
-      .container{
-          display: grid;
-          grid-template-columns: repeat (3,1fr );
-          place-items: center;
-      }
-     
 
-  }
 #x{
     font-size: 3rem;
     font-weight: 700;
@@ -181,44 +189,33 @@ a:hover{
     transition-delay: 0.3s;
 
 }
-/* a span{
-    position: absolute;
-    display: block;
-}
-a span:nth-child(1){
-    top:0;
-    left:-100% ;
-    height: 2px;
-    background: linear-gradient(90deg,transparent,#2196f3);
-}
 
-a:hover span:nth-child(1){
-    left: 100%;
-    transition: 1s;
-}
-a span:nth-child(3){
-    bottom:0;
-    right:-100% ;
-    height: 2px;
-    background: linear-gradient(270deg,transparent,#2196f3);
-}
+@media only screen and (max-width:760px){
+   .con{
+        height: fit-content;
+        width: fit-content;
+        display: grid;
+        grid-template-columns: repeat (3,1fr 1fr 1fr );
+        overflow-x: scroll;
+   }
+   .cs #con,.cs #vss{
+       font-size: larger;
+      
+       top: 0em;
+   }
+   .cs {
+       top: -0.1em;
+      
+   }
+   .cs >p{
+       position: relative;
+       left: 5em;
+   }
 
-a:hover span:nth-child(3){
-    right: 100%;
-    transition: 1s;
-    transition-delay: 0.5s;
+   .cs1 #b{
+       font-size: larger;
+   }
+   .cs2 > h1{
+       font-size: larger;
+   }
 }
-
-a span:nth-child(2){
-    top:-100;
-    right:0% ;
-    width: 2px;
-    height: 100%;
-    background: linear-gradient(180deg,transparent,#2196f3);
-}
-
-a:hover span:nth-child(2){
-    top: 100%;
-    transition: 1s;
-    transition-delay: 0.25s;
-} */
