--- a/project-wt/jobfind/src/app/fill/fill.component.html
+++ b/project-wt/jobfind/src/app/fill/fill.component.html
@@ -47,8 +47,15 @@
                 <ng-container matColumnDef="actions">
                     <mat-header-cell *matHeaderCellDef>actions</mat-header-cell>
                     <mat-cell *matCellDef="let row">
-                        <button class="btn btn-secondary" type="button" style="margin:10px;">Hire</button>
-                        <button class="btn btn-danger">Reject</button>
+                        <div class="but" id="bu">
+                            <div>
+                                <button class="btn btn-secondary" id="hire" type="button" style="margin:10px; padding: 0.2rem 0.5rem;"(click)="hire(row.email)">Hire</button>
+                            </div>
+                            <!-- <ng-template #elseBlock>
+                                <button class="btn btn-success" id="hire" type="button" style="margin:10px; padding: 0.2rem 0.5rem;">Hired</button>
+                            </ng-template> -->
+                            <button class="btn btn-danger"  style="margin:10px; padding: 0.2rem 0.5rem;"(click)="onDelete(row.$key)">Reject</button>
+                        </div>
                     </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="Resume">
@@ -57,7 +64,9 @@
                 </ng-container>
                 <ng-container matColumnDef="loading">
                     <mat-footer-cell *matFooterCellDef colspan="6">
-                        <mat-spinner></mat-spinner>
+                        <div class="spin">
+                            <mat-spinner></mat-spinner>
+                        </div>
                     </mat-footer-cell>
                 </ng-container>
                 <ng-container matColumnDef="noData">
