--- a/project-wt/jobfind/src/app/footer/footer.component.html
+++ b/project-wt/jobfind/src/app/footer/footer.component.html
@@ -1,8 +1,8 @@
-<footer>
+<footer id="footer">
     <div class="mcon">
-  <ul>
+  <ul class="con">
       <li>
-          <h1>LOGO</h1>
+          <h1>Recruit</h1>
       </li>
       <li>
           &copy; Copyright 2022
@@ -11,9 +11,7 @@
     <div class="con1">
       <ul>
           <li><h1>Support</h1></li>
-          <li>Contact Us</li>
-          <li>About Us</li>
-          <li>FAQ's</li>
+          <li> <a routerLink="/contact">Contact us</a></li>
       </ul>
     
     </div>
