--- a/project-wt/jobfind/src/app/home/home.component.html
+++ b/project-wt/jobfind/src/app/home/home.component.html
@@ -1,11 +1,12 @@
 <div class="con1">
     <header>
-        <a href="#" class="logo">Logo</a>
-        <ul>
-            <li> <a routerLink="/home" class="active">Home</a>  </li>
-            <li> <a href="#">About</a></li>
-            <li><a href="#">Work</a></li>
-            <li><a href="#">Contact us</a></li>
+        <a href="#" class="logo">Recruit</a>
+        <ul id='scr'>
+            <li> <a routerLink="/home" class="active">Home</a> </li>
+            <li><a routerLink="/admin/signin">Admin Login</a></li>
+            <li><a routerLink="/contact">Contact us</a></li>
         </ul>
+       
     </header>
+   
 </div>
