--- a/project-wt/jobfind/src/app/showdata/showdata.component.css
+++ b/project-wt/jobfind/src/app/showdata/showdata.component.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
 .foo{
     position: relative;
     top:18rem;
@@ -9,6 +10,51 @@
     font-family: 'Poppins', sans-serif;
     box-sizing: border-box;
 }
+#main{
+    min-height: 90vh;
+}
+.up{
+    margin-bottom: 1rem;
+    position: relative;
+    top:0.1rem;
+}
+.spin{
+    position: relative;
+    margin-top: 1rem;
+    left:32rem;
+    margin-bottom: 1rem;
+}
+.hide{
+    display: none;
+}
+.zs .hir
+{
+    width: 90%;
+    height: 90%;
+    position: relative;
+    left: -15rem;
+    top: -2rem;
+    margin: auto;
+    padding: 20px;
+    box-shadow: none;
+    font-size: 2rem;
+    background-color: greenyellow;
+}
+.vs{
+    display: flex;
+    flex-direction: column;
+    /* justify-content: center; */
+    /* align-items: center; */
+    position: relative;
+    top:-6rem;
+    width:90%;
+    left:-23rem;
+    height: 100%;
+}
+.vs .vss{
+    width: 100%;
+    height: 100%;
+}
 body{
     background: linear-gradient(#fff ,#c7e08d );
     min-height: 105vh;
@@ -17,17 +63,17 @@ body{
     overflow: hidden;
 }
 .create{
-    height:120vh;
-    overflow:auto;
+    overflow-y:hidden;
 }
 .create1{
     position: relative;
     top:20rem;
 }
 .zs{
-    position: absolute;
-    top:15rem;
-    margin-left: 25rem;
+    position: relative;
+    top: 10em;
+    left: 30em;
+    width: 25%;
 }
 .e h1{
     margin-top: 25px;
@@ -37,24 +83,104 @@ body{
 }
 .sz{
     padding: 3px 3px;
+    position: relative;
+    right: 6em;
 }
 .con{
     width:100%;
 }
+/* #main .con{
+    position: relative;
+    bottom: 1rem;
+    left:1rem;
+} */
 .con>img{
-    width: 40%;
-    height: 40%;
+    width: 27%;
+    height: 30%;
 }
 #z{
-    position: absolute;
-    bottom:15rem;
-    right: 0;
+    position: relative;
+    bottom:8rem;
+    left:55em;
+    /* display: none; */
 }
 .z{
     margin-top:1rem;
 }
+.zh{
+    position: relative;
+    top: 3rem;
+    left:3rem;
+}
+.but .btx{
+    position: relative;
+    left:10rem;
+}
 .c{
     position: relative;
-    top:20rem;
+    top:3rem;
     /* padding: 20px 20px; */
  }       
+
+
+ @media only screen and (max-width:760px){
+    #main{
+        height: fit-content;
+        width: fit-content;
+        display: grid;
+        grid-template-columns: repeat (3,1fr 1fr 1fr );   
+   }
+   .e >h1{
+       font-size: medium;
+   }
+   #main .con>img{
+        position: relative;
+        bottom: -13rem;
+        width:60%;
+        height:60%
+   }
+   .vs .but{
+        position: relative;
+        left: 2em;
+   }
+    #z{
+        position: relative;
+        top: 3em;
+
+   }
+   .sz{
+     position: relative;
+     left: -24rem;
+     top:-6rem;
+   }
+   .c{
+       top:3em;
+   }
+    .zs{
+
+        width: 60%;
+        height: 60%;
+
+    }
+    .zh .sz {
+        position: relative;
+        bottom: 1.5em;
+        left: 1em;
+    }
+    .zs .hir{
+        font-size: medium;
+        height: 60%;
+        width: 60%;
+        position: relative;
+        left: -24em;
+        top: -6em;
+    }
+    .z .sz{
+        position: relative;
+        left: -22em;
+        top: -4em;
+
+       
+    }
+  
+ }
