--- a/project-wt/jobfind/src/app/showdata/showdata.component.html
+++ b/project-wt/jobfind/src/app/showdata/showdata.component.html
@@ -1,18 +1,68 @@
-<div *ngIf="!crte; else elseBlock"> 
+<body>
+<div id="main" *ngIf="!crte; else elseBlock">
     <div class="e">
         <h1>Welcome {{names}}</h1>
     </div>
     <div class="main-content list-customer zs">
-        <div>
-            <button class="btn btn-primary block sz" type="button" (click)="create()">
+        <div class="by"*ngIf="!this.ser.check else elseBlock">
+            <button class="btn btn-primary block sz" type="button" style="cursor: pointer;" (click)="create()">
                 Submit Application
             </button>
+            <div class="container z">
+                <button class="btn btn-primary block sz" (click)="Signout()" style="cursor: pointer;" type="button">
+                    Signout
+                </button>
+            </div>
+            <!-- <button class="btn btn-primary"(click)="create()">c</button> -->
         </div>
-        <div class="container z">
-            <button class="btn btn-primary block sz" (click)="Signout()" type="button">
-                  Signout
-            </button>
-        </div>
+        <ng-template #elseBlock>
+            <div class="vs" *ngIf="!this.ser.hires  else elseBlock">
+                <div>
+                    <div class="up" id="u">
+                        Your Application has been successfully submitted.
+                    </div>
+                    <mat-table [dataSource]="listData" class="vss">
+                        <ng-container matColumnDef="actions">
+                            <mat-header-cell *matHeaderCellDef>Actions</mat-header-cell>
+                            <mat-cell *matCellDef="let row">
+                                <div class="but" id="bu">
+                                    <button class="btn btn-secondary" id="hire" type="button" style="margin:10px; padding: 0.2rem 0.5rem;"(click)="onEdit(row)">Update</button>
+                                    <button class="btn btn-danger"  style="margin:10px; padding: 0.2rem 0.5rem;"(click)="onDelete(row.$key)">Delete</button>
+                                </div>
+                            </mat-cell>
+                        </ng-container>
+                        <ng-container matColumnDef="loading">
+                            <mat-footer-cell *matFooterCellDef colspan="6">
+                                <div class="spin">
+                                    <mat-spinner></mat-spinner>
+                                </div>
+                            </mat-footer-cell>
+                        </ng-container>
+                        <ng-container matColumnDef="noData">
+                            <mat-footer-cell *matFooterCellDef colspan="6">
+                                No data.
+                            </mat-footer-cell>
+                        </ng-container>
+                        <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+                        <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+                        <mat-footer-row *matFooterRowDef="['loading']" [ngClass]="{'hide':listData!=null}"></mat-footer-row>
+                    </mat-table>
+                </div>
+                <div class="container zh">
+                    <button class="btn btn-primary block sz" (click)="Signout()" type="button">
+                        Signout
+                    </button>
+                </div>
+            </div>
+            <ng-template #elseBlock>
+                <span class="hir">You are hired</span>
+                <div class="container z">
+                    <button class="btn btn-primary block sz" (click)="Signout()" type="button">
+                        Signout
+                    </button>
+                </div>
+            </ng-template>
+        </ng-template>
     </div>
     <div class="con">
         <img src="../assets/show.svg" alt="" id="z">
@@ -25,4 +75,5 @@
     <div class="create">
         <app-create></app-create>
     </div>
- </ng-template>   
+</ng-template>
+</body>
